--- a/index.html
+++ b/index.html
@@ -7,16 +7,24 @@
     <meta name="description" content="S.Yabunaka@strCode Portfolio site.">
   </head>
   <body>
-    <header>
-      <h1>S.Yabunaka@strCode.</h1>
-    </header>
-    <main>
-      <p>COMINGSOON.</p>
-    </main>
-    <footer>
-      <p>
-        <small>(c) 2025 S.Yabunaka@strCode.</small>
-      </p>
-    </footer>
+    <div class="page">
+      <div class="page__contents">
+        <header class="header">
+          <div class="container header__container">
+            <h1 class="title header__title">S.Yabunaka@strCode.</h1>
+          </div>
+        </header>
+        <main class="main">
+          <p>COMINGSOON.</p>
+        </main>
+        <footer class="footer">
+          <div class="container footer__container">
+            <p class="footer__copyright">
+              <small class="copyright">(c) 2025 S.Yabunaka@strCode.</small>
+            </p>
+          </div>
+        </footer>
+      </div>
+    </div>
   </body>
 </html>
